# biv

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  architecture.md  cdc_growth_charts.md  implementation_plan.md  main.py  modified-z-scores.md  pyproject.toml  tdd_guide.md  zscore_implementation_plan.md  zscores_testing.md
.clinerules/: code_review_guidelines.md  code_standards.md
.github/workflows/: ci.yml
data/growth_standard/: statage_combined.csv  who_growth_standards.csv  wtage_combined.csv
docs/: README.md  project_setup.md  tdd_protocol.md  version_control_workflows.md
docs/cdc/: background-cdc-extended-bmi-for-age-growth-charts.md  cdc-extended-bmi-for-age-growth-charts.md  modified-z-scores.md  sas-program-for-who-growth-charts.md
docs/cdc/sas/: WHOref_d.csv  biv.sas  biv_sas_cdc.csv  biv_sas_who.csv  cdc-source-code-csv.sas  who-source-code-csv.sas  who-source-code.sas
scripts/: download_data.py
src/: __init__.py  app.py  auth.py  config.py
src/biv/: __init__.py  api.py  detector_pipeline.py  zscores.py
src/biv/methods/: __init__.py  base.py
src/biv/methods/range/: __init__.py  detector.py
src/biv/methods/zscore/: __init__.py  detector.py
src/components/: __init__.py  combined_chart.py  data_table.py  error_controls.py  growth_chart.py  outlier_controls.py  patient_info.py  sidebar.py  velocity_chart.py
src/data/: growth_standards.py  loader.py  processor.py
src/styles/: __init__.py  custom.css
src/utils/: __init__.py  calculations.py  persistence.py  state_manager.py  visit_helpers.py
tests/: benchmark_zscores.py  conftest.py  test_api.py  test_biv.py  test_detector_pipeline.py  test_zscores.py
tests/methods/: test_base.py  test_methods.py
tests/methods/test_range/: test_range_detector.py
tests/methods/test_zscore/: test_zscore_detector.py
tests/scripts/: test_download_data.py
