[project]
name = "biv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joon Lee", email = "seouri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ""

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true
mypy_path = "src"

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
