[project]
name = "biv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joon Lee", email = "seouri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dask[dataframe,delayed]>=2025.9.1",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "tqdm>=4.67.0",
    "urllib3>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ""

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "W605"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "download_data"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.test_zscores"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "scipy-stubs>=1.16.2.3",
    "types-requests>=2.32.4.20250913",
]
