[project]
name = "outlier-labeling"
version = "0.1.0"
description = "Streamlit dashboard for labeling outliers in pediatric longitudinal height measurements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "streamlit-aggrid>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
